[gd_scene load_steps=4 format=3 uid="uid://bqjc2q5secxgy"]

[ext_resource type="Theme" uid="uid://bqh2iuipvdjx" path="res://Themes/TemaNovo.tres" id="1_g0fg2"]
[ext_resource type="Script" uid="uid://c5b27k2fmvkqh" path="res://Scripts/ListaDeItens.gd" id="1_u7xwu"]
[ext_resource type="Texture2D" uid="uid://yd6lj62ywjel" path="res://icon.svg" id="3_ntqyp"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.780392, 0.780392, 0.780392, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/MarginContainer"]
layout_mode = 2
theme = ExtResource("1_g0fg2")

[node name="LineEdit" type="LineEdit" parent="HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = " Nome do produto"

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_g0fg2")

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 40
script = ExtResource("1_u7xwu")

[node name="HTTPRequest" type="HTTPRequest" parent="HBoxContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]

[node name="Timer" type="Timer" parent="HBoxContainer/MarginContainer/VBoxContainer"]
one_shot = true

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 55
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 35

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/MarginContainer2/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Itens" type="Label" parent="HBoxContainer/MarginContainer2/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Itens"

[node name="description" type="Label" parent="HBoxContainer/MarginContainer2/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Digite os dados do item a ser cadastrado e/ou editados:"

[node name="itemLabel" type="Label" parent="HBoxContainer/MarginContainer2/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Nome:"

[node name="LineEdit" type="LineEdit" parent="HBoxContainer/MarginContainer2/ScrollContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Nome do produto"

[node name="itemQtd" type="Label" parent="HBoxContainer/MarginContainer2/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Quantidade:"

[node name="SpinBox" type="SpinBox" parent="HBoxContainer/MarginContainer2/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="itemImg" type="Label" parent="HBoxContainer/MarginContainer2/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Imagem:"

[node name="selectImageButton" type="Button" parent="HBoxContainer/MarginContainer2/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Selecionar imagem"

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/MarginContainer2/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_ntqyp")

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/MarginContainer2/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Cadastrar" type="Button" parent="HBoxContainer/MarginContainer2/ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Cadastrar"

[node name="Editar" type="Button" parent="HBoxContainer/MarginContainer2/ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Editar"

[node name="Remover" type="Button" parent="HBoxContainer/MarginContainer2/ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Excluir"

[connection signal="text_changed" from="HBoxContainer/MarginContainer/VBoxContainer/LineEdit" to="HBoxContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer" method="_on_line_edit_text_changed"]
[connection signal="request_completed" from="HBoxContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/HTTPRequest" to="HBoxContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer" method="_on_http_request_request_completed"]
[connection signal="timeout" from="HBoxContainer/MarginContainer/VBoxContainer/Timer" to="HBoxContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer" method="_on_timer_timeout"]
